# tg_bot_password

./: Makefile  pyproject.toml
bot_tg_gen_pas/: gen_pas.py
